--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "desafio4",
   "version": "1.0.0",
-  "description": "",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -17,6 +16,11 @@
   },
   "homepage": "https://github.com/tatenalan/coder-dg-4#readme",
   "dependencies": {
-    "express": "^4.17.1"
-  }
+    "ejs": "^3.1.6",
+    "express": "^4.17.1",
+    "express-handlebars": "^6.0.2",
+    "pug": "^3.0.2"
+  },
+  "devDependencies": {},
+  "description": ""
 }
